# beam_tools

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: hyperstatic_beam.py  simply_supported_beam.py  visualization.py
src/beam_tools/: __init__.py  beam.py  load.py  singularity.py  support.py
